--- a/package.json
+++ b/package.json
@@ -4,6 +4,10 @@
   "description": "GisViewer and Management Tool",
   "author": "Michel van der Weide",
   "license": "ISC",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/TurBas/GisViewer.git"
+  },
   "main": "index.js",
   "scripts": {
     "init": "npm install",
@@ -21,6 +25,7 @@
     "karma-firefox-launcher": "^0.1.4",
     "karma-jasmine": "^0.3.4",
     "karma-phantomjs-launcher": "^0.1.4",
-    "karma-safari-launcher": "^0.1.1"
+    "karma-safari-launcher": "^0.1.1",
+    "load-grunt-tasks": "^2.0.0"
   }
 }
