--- a/bower.json
+++ b/bower.json
@@ -19,6 +19,10 @@
   },
   "dependencies": {
     "angular": "~1.3.8",
+    "bootstrap": "~3.3.1",
     "jquery": "~2.1.3"
+  },
+  "resolutions": {
+    "angular": "~1.3.8"
   }
 }
