--- a/package.json
+++ b/package.json
@@ -14,6 +14,11 @@
     "install": "bower install",
     "test": "grunt test"
   },
+  "dependencies": {
+    "body-parser": "^1.10.1",
+    "express": "^4.10.7",
+    "underscore": "^1.7.0"
+  },
   "devDependencies": {
     "grunt": "^0.4.5",
     "grunt-contrib-jshint": "^0.10.0",
@@ -22,6 +27,7 @@
     "jshint-stylish": "^1.0.0",
     "karma": "^0.12.31",
     "karma-chrome-launcher": "^0.1.7",
+    "karma-coverage": "^0.2.7",
     "karma-firefox-launcher": "^0.1.4",
     "karma-jasmine": "^0.3.4",
     "karma-phantomjs-launcher": "^0.1.4",
