--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
   "dependencies": {
     "body-parser": "^1.10.1",
     "express": "^4.10.7",
-    "underscore": "^1.7.0"
+    "underscore": "^1.7.0",
+    "xml2js": "^0.4.4"
   },
   "devDependencies": {
     "grunt": "^0.4.5",
