--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "body-parser": "^1.10.1",
     "express": "^4.10.7",
+    "mongodb": "^1.4.28",
     "underscore": "^1.7.0",
     "xml2js": "^0.4.4"
   },
